02-rollouts/canary/4-analysis/job/api.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: api

---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: api
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - name: api-port
    port: 3000
    targetPort: 3000
  - name: metrics
    port: 9464
    targetPort: 9464

---
apiVersion: v1
kind: Service
metadata:
  name: canary-api-svc
  namespace: api
  labels:
    app: api
spec:
  type: ClusterIP
  selector:
    app: api
    name: api-po
  ports:
  - name: api-port
    port: 3000
    targetPort: 3000
  - name: metrics
    port: 9464
    targetPort: 9464
