02-rollouts/canary/4-analysis/job/api-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-httproute
  namespace: api
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: web
    namespace: traefik
  hostnames:
  - api-192.168.39.200.nip.io
  rules:
    - matches:
      - path:
          value: /api
          type: PathPrefix
      backendRefs:
      - name: api-svc
        port: 3000
      - name: canary-api-svc
        port: 3000
